<resources>
    <string name="app_name">Hello</string>
    <string name="result_success">Login success</string>
</resources>
